--- a/html.html
+++ b/html.html
@@ -10,9 +10,9 @@
 
 <body>
     <div class="options-menu">
-        <input class="newgame-btn" type="button" value="New game">
+        <input class="newgame-btn" type="button" value="Начать строить коммунизм">
         <div class="bomb-input">
-            <div class="bomb-index-header">Bombs:</div>
+            <div class="bomb-index-header">Взятки:</div>
             <input class="bomb-index" type="number" value="10" max="99">
         </div>
         
