--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
     <canvas id="unity-canvas" width=600 height=950 tabindex="-1" style="width: 600px; height: 950px; background: #231F20"></canvas>
-    <script src="Build/Build.loader.js"></script>
+    <script src="Build/AyurDondokov.github.io.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
@@ -25,9 +25,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/Build.data",
-        frameworkUrl: "Build/Build.framework.js",
-        codeUrl: "Build/Build.wasm",
+        dataUrl: "Build/AyurDondokov.github.io.data",
+        frameworkUrl: "Build/AyurDondokov.github.io.framework.js",
+        codeUrl: "Build/AyurDondokov.github.io.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "AyurGames",
         productName: "AR-GameWeb-FT",
